# database-connector

./: Makefile  README.md
.github/workflows/: ConnectorTests.yml  LinuxTests.yml
scripts/: format.py
src/include/: defer.hpp  make_unique.hpp  pool.hpp
src/include/dbconnector/: bind_data.hpp  pool.hpp
src/include/dbconnector/optimizer/: aggregate_optimizer.hpp  optimizer_util.hpp  order_by_and_limit_optimizer.hpp
src/include/dbconnector/pool/: acquire_mode.hpp  cached_connection.hpp  connection_pool.hpp  connection_pool_config.hpp  connection_pool_impl.hpp  pool_exception.hpp  pooled_connection.hpp  pooled_connection_impl.hpp  thread_local_connection_cache.hpp  thread_local_connection_cache_impl.hpp
src/include/dbconnector/query/: query_writer.hpp  query_writer_exception.hpp
src/include/dbconnector/table_scan/: filter_pushdown.hpp  filter_util.hpp
src/include/pool/: connection_pool_impl.hpp  pooled_connection.hpp  thread_local_connection_cache.hpp  thread_local_connection_cache_impl.hpp
src/optimizer/: aggregate_optimizer.cpp  optimizer_util.cpp  order_by_and_limit_optimizer.cpp
src/query/: query_writer.cpp
src/table_scan/: filter_pushdown.cpp  filter_util.cpp
test/: CMakeLists.txt  test_common.cpp  test_defer.cpp  test_make_unique.cpp  test_pool.cpp
test/extension/: CMakeLists.txt  test_query.cpp
test/include/: test_common.hpp
